--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "deploy": "npm run build && gh-pages -d dist",
+    "deploy": "npm run build && cp dist/index.html dist/404.html && gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview",
     "check:updates": "npm outdated",
