--- a/package.json
+++ b/package.json
@@ -14,47 +14,49 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@supabase/supabase-js": "^2.55.0",
-    "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/query-sync-storage-persister": "^5.83.0",
-    "@tanstack/react-query": "^5.83.0",
-    "@tanstack/react-query-persist-client": "^5.83.0",
-    "@tanstack/react-router": "^1.129.8",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/supabase-js": "^2.57.4",
+    "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/query-async-storage-persister": "^5.87.4",
+    "@tanstack/query-sync-storage-persister": "^5.87.4",
+    "@tanstack/react-query": "^5.87.4",
+    "@tanstack/react-query-persist-client": "^5.87.4",
+    "@tanstack/react-router": "^1.131.41",
     "@tanstack/react-virtual": "^3.13.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "i18next": "^25.3.2",
+    "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
-    "jotai": "^2.12.5",
-    "lucide-react": "^0.534.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-i18next": "^15.6.1",
-    "react-resizable-panels": "^3.0.4",
+    "jotai": "^2.14.0",
+    "localforage": "^1.10.0",
+    "lucide-react": "^0.544.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-i18next": "^15.7.3",
+    "react-resizable-panels": "^3.0.6",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
-    "@eslint/js": "^9.31.0",
-    "@types/node": "^24.1.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.7.0",
-    "eslint": "^9.31.0",
+    "@eslint/js": "^9.35.0",
+    "@types/node": "^24.4.0",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.2",
+    "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
-    "globals": "^16.3.0",
+    "globals": "^16.4.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "tw-animate-css": "^1.3.7",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.38.0",
-    "vite": "^7.0.6"
+    "tw-animate-css": "^1.3.8",
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.43.0",
+    "vite": "^7.1.5"
   }
 }
