chore: install leaflet to react

--- a/package.json
+++ b/package.json
@@ -32,17 +32,20 @@
     "i18next": "^25.6.3",
     "i18next-browser-languagedetector": "^8.2.0",
     "jotai": "^2.15.1",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "lucide-react": "^0.555.0",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
     "react-i18next": "^16.3.5",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-resizable-panels": "^3.0.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
