--- a/package.json
+++ b/package.json
@@ -19,47 +19,47 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@supabase/supabase-js": "^2.86.0",
-    "@tailwindcss/vite": "^4.1.17",
-    "@tanstack/query-async-storage-persister": "^5.90.13",
-    "@tanstack/query-sync-storage-persister": "^5.90.13",
-    "@tanstack/react-query": "^5.90.11",
-    "@tanstack/react-query-persist-client": "^5.90.13",
-    "@tanstack/react-router": "^1.139.7",
-    "@tanstack/react-virtual": "^3.13.12",
+    "@supabase/supabase-js": "^2.93.3",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/query-async-storage-persister": "^5.90.22",
+    "@tanstack/query-sync-storage-persister": "^5.90.22",
+    "@tanstack/react-query": "^5.90.20",
+    "@tanstack/react-query-persist-client": "^5.90.22",
+    "@tanstack/react-router": "^1.157.16",
+    "@tanstack/react-virtual": "^3.13.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "i18next": "^25.6.3",
+    "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
-    "jotai": "^2.15.1",
+    "jotai": "^2.17.0",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
-    "lucide-react": "^0.555.0",
-    "react": "^19.0.0-rc.1",
-    "react-dom": "^19.0.0-rc.1",
-    "react-i18next": "^16.3.5",
-    "react-leaflet": "^5.0.0-rc.2",
-    "react-resizable-panels": "^3.0.6",
+    "lucide-react": "^0.563.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-i18next": "^16.5.4",
+    "react-leaflet": "^5.0.0",
+    "react-resizable-panels": "^4.5.5",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
+    "@eslint/js": "^9.39.2",
     "@types/leaflet": "^1.9.21",
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.7",
+    "@types/node": "^25.1.0",
+    "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
+    "@vitejs/plugin-react": "^5.1.2",
+    "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-react-refresh": "^0.4.26",
     "gh-pages": "^6.3.0",
-    "globals": "^16.5.0",
-    "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.7.1",
+    "globals": "^17.2.0",
+    "prettier": "^3.8.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.48.0",
-    "vite": "^7.2.4"
+    "typescript-eslint": "^8.54.0",
+    "vite": "^7.3.1"
   }
 }
